deployments/banklo-cards-issuer/templates/banklo-cards-issuer-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: banklo-cards-issuer-dr
spec:
  host: banklo-cards-issuer
  subsets:
    - name: v1
      labels:
        version: v1
