deployments/banklo-cards-issuer/templates/banklo-cards-issuer-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: banklo-cards-issuer-vs
spec:
  hosts:
    - banklo-cards-issuer
  http:
    - match:
        - uri:
            prefix: /cards
        - uri:
          - prefix: /accounts
      route:
        - destination:
            host: banklo-cards-issuer
            port:
              number: 80
            subset: v1
          weight: 100
